--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,10 @@ jobs:
           persist-credentials: true
           fetch-depth: 0
       - name: Bump package version
-        run: yarn version --patch
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          yarn version --patch
       - name: Push change
         uses: ad-m/github-push-action@master
         with:
