--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:charltoons/interview-test.git",
   "author": "Charlton Roberts <croberts@frame.io>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "version": "echo $npm_package_version"
+  }
 }
