--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,8 +35,8 @@ jobs:
           # Cleanup tmp file
           rm .version
           # Make RELEASE_VERSION available in subsequent steps
-          echo "::set-env name=RELEASE_VERSION::$RELEASE_VERSION"
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
       - name: Create release 
         run:
-          gh release create $RELEASE_VERSION --draft --target main --title \"Release $RELEASE_VERSION\""
+          gh release create $RELEASE_VERSION --draft --target main --title \"Release ${{ env.RELEASE_VERSION }}\""
 
