--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,5 +38,5 @@ jobs:
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
       - name: Create release 
         run:
-          gh release create $RELEASE_VERSION --draft --target main --title \"Release ${{ env.RELEASE_VERSION }}\""
+          gh release create $RELEASE_VERSION --draft --target main --title \"Release ${{ env.RELEASE_VERSION }}\"
 
