--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,6 +38,7 @@ jobs:
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
       - name: Create release 
         run: |
+          echo "Creating release $RELEASE_VERSION"
           gh release create $RELEASE_VERSION --draft --target main --title \"Release ${{ env.RELEASE_VERSION }}\"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
