--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "license": "MIT",
   "scripts": {
     "version": "echo \"v$npm_package_version\" > .version"
+  },
+  "dependencies": {
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
+    "@octokit/core": "^3.5.1"
   }
 }
