--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
-    "@octokit/core": "^3.5.1"
+    "@octokit/core": "^3.5.1",
+    "typescript": "^4.4.4"
   }
 }
