--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -16,5 +16,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12.x'
+      - name: Install dependencies
+        run: npm install typescript
       - name: Remove Deployment
         run: npx ts-node ./scripts/pr-cleanup.ts
