--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.0",
     "@octokit/core": "^3.5.1",
+    "@types/node": "^16.11.4",
     "typescript": "^4.4.4"
   }
 }
